[gd_scene load_steps=11 format=2]

[ext_resource path="res://images/fondo-libro.png" type="Texture" id=1]
[ext_resource path="res://assets/iconos/derecha.png" type="Texture" id=2]
[ext_resource path="res://assets/iconos/izquierda.png" type="Texture" id=3]
[ext_resource path="res://assets/iconos/salir.png" type="Texture" id=4]
[ext_resource path="res://juegoreciclaje/EnciclopediaReciclaje.gd" type="Script" id=5]
[ext_resource path="res://SFX/ardilla.ogg" type="AudioStream" id=11]
[ext_resource path="res://SFX/3.1. mouse-click1.ogg" type="AudioStream" id=12]
[ext_resource path="res://SFX/page.ogg" type="AudioStream" id=13]

[sub_resource type="DynamicFontData" id=3]
font_path = "res://fonts/Righteous-Regular.ttf"

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = SubResource( 3 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1027.0
margin_bottom = 601.0
texture = ExtResource( 1 )
expand = true

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 994.0
margin_bottom = 570.0

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 984.0
margin_bottom = 68.0

[node name="TextureButton" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
margin_right = 68.0
margin_bottom = 68.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 0
texture_normal = ExtResource( 4 )

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 72.0
margin_right = 984.0
margin_bottom = 435.0
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 490.0
margin_bottom = 363.0
size_flags_horizontal = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/CenterContainer"]
margin_left = 204.0
margin_top = 163.0
margin_right = 285.0
margin_bottom = 199.0
custom_constants/separation = 10

[node name="Nombre" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/CenterContainer/VBoxContainer2"]
margin_right = 81.0
margin_bottom = 26.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Plastico"
align = 1

[node name="Arbol" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer/CenterContainer/VBoxContainer2"]
margin_top = 36.0
margin_right = 81.0
margin_bottom = 36.0
stretch_mode = 6

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 494.0
margin_right = 984.0
margin_bottom = 363.0
size_flags_horizontal = 3
custom_constants/margin_top = 25

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/MarginContainer"]
margin_top = 25.0
margin_right = 490.0
margin_bottom = 363.0
size_flags_horizontal = 3

[node name="Descripcion" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer"]
margin_right = 490.0
margin_bottom = 26.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Descripci√≥n"
align = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 30.0
margin_right = 490.0
margin_bottom = 304.0
size_flags_vertical = 3
custom_constants/margin_right = 40
custom_constants/margin_left = 40

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer/MarginContainer"]
margin_left = 40.0
margin_right = 450.0
margin_bottom = 274.0
size_flags_vertical = 3
custom_colors/default_color = Color( 0, 0, 0, 1 )
scroll_active = false

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 308.0
margin_right = 490.0
margin_bottom = 338.0
custom_constants/separation = 5
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 198.0
margin_right = 198.0
margin_bottom = 30.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_bottom = 26.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
align = 1

[node name="Hoja" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 30.0
margin_bottom = 30.0

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 203.0
margin_right = 286.0
margin_bottom = 30.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_right = 83.0
margin_bottom = 26.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Ejemplos"
align = 1

[node name="Fruto" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_top = 30.0
margin_right = 83.0
margin_bottom = 30.0

[node name="VBoxContainer3" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 291.0
margin_right = 291.0
margin_bottom = 30.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer3"]
margin_bottom = 26.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
align = 1

[node name="Flor" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer3"]
margin_top = 30.0
margin_bottom = 30.0

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_left = 23.0
margin_top = 480.0
margin_right = 961.0
margin_bottom = 560.0
size_flags_horizontal = 4
size_flags_vertical = 10
custom_constants/separation = 650

[node name="back" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
margin_right = 144.0
margin_bottom = 80.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 3 )

[node name="next" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 794.0
margin_right = 938.0
margin_bottom = 80.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 2 )

[node name="SFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -4.727

[node name="Click" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )

[node name="Page" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer3/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/next" to="." method="_on_next_pressed"]
